--- a/plugin-btn-translate/src/main/res/values/themes.xml
+++ b/plugin-btn-translate/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources>
     <!-- Base application theme. -->
-    <style name="Theme.ZettelNotes" parent="Theme.AppCompat.DayNight.NoActionBar">
+    <style name="Theme.ZettelNotes" parent="Theme.AppCompat.DayNight">
     </style>
 
     <!--    transparent activity -->
@@ -8,6 +8,12 @@
         <item name="android:windowIsTranslucent">true</item>
         <item name="android:windowBackground">@android:color/transparent</item>
         <item name="android:windowContentOverlay">@null</item>
+        <item name="android:windowNoTitle">true</item>
+        <item name="android:windowIsFloating">true</item>
+        <item name="android:backgroundDimEnabled">false</item>
+    </style>
+
+    <style name="AppThemeTransparentWithWindow" parent="Theme.AppCompat.DayNight.NoActionBar">
         <item name="android:windowNoTitle">true</item>
         <item name="android:windowIsFloating">true</item>
         <item name="android:backgroundDimEnabled">false</item>
