--- a/plugin-btn-smile/src/main/res/layout/activity_launcher.xml
+++ b/plugin-btn-smile/src/main/res/layout/activity_launcher.xml
@@ -1,14 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<LinearLayout xmlns:android = "http://schemas.android.com/apk/res/android"
+   android:orientation = "vertical"
+   android:layout_width = "match_parent"
+   android:layout_height = "match_parent"
+   android:gravity = "center">
 
     <TextView
-        android:id="@+id/textView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:padding="16dp"
-        android:text="Spread Smile in the World" />
+       android:id = "@+id/textView"
+       android:layout_width = "match_parent"
+       android:layout_height = "wrap_content"
+       android:gravity = "center"
+       android:padding = "16dp"
+       android:text = "🙏 Thank you for donation "
+       android:textSize = "24sp"
+       android:textStyle = "bold" />
 </LinearLayout>
