--- a/plugin-btn-chat-ai/src/main/res/layout/activity_main.xml
+++ b/plugin-btn-chat-ai/src/main/res/layout/activity_main.xml
@@ -7,12 +7,14 @@
 
     <ListView
        android:id="@+id/list_view"
-       android:layout_weight="1"
        android:layout_width="match_parent"
-       android:transcriptMode="alwaysScroll"
-       android:stackFromBottom="true"
        android:layout_height="0dp"
-       android:layout_margin="8dp" />
+       android:layout_weight="1"
+       android:layout_margin="8dp"
+       android:divider="@null"
+       android:stackFromBottom="true"
+       android:transcriptMode="alwaysScroll" />
+
 
     <View
        android:background="@android:color/black"
