--- a/plugin-alarm/src/main/res/values/themes.xml
+++ b/plugin-alarm/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources>
     <!-- Base application theme. -->
-    <style name="Theme.ZettelNotes" parent="Theme.AppCompat.DayNight.NoActionBar" />
+    <style name="Theme.ZettelNotes" parent="Theme.AppCompat.DayNight" />
 
     <!--    transparent activity -->
     <style name="AppThemeTransparent" parent="Theme.AppCompat.DayNight.NoActionBar">
