--- a/plugin-btn-todotxt/src/main/res/values/themes.xml
+++ b/plugin-btn-todotxt/src/main/res/values/themes.xml
@@ -1,9 +1,9 @@
 <resources>
     <!-- Base application theme. -->
-    <style name="Theme.ZettelNotes" parent="Theme.AppCompat.DayNight.NoActionBar"></style>
+    <style name="Theme.ZettelNotes" parent="Theme.MaterialComponents.DayNight.NoActionBar" />
 
     <!--    transparent activity -->
-    <style name="AppThemeTransparent" parent="Theme.AppCompat.DayNight.NoActionBar">
+    <style name="AppThemeTransparent" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <item name="android:windowIsTranslucent">true</item>
         <item name="android:windowBackground">@android:color/transparent</item>
         <item name="android:windowContentOverlay">@null</item>
