--- a/plugin-btn-speech2text/src/main/res/drawable/ic_launcher_foreground.xml
+++ b/plugin-btn-speech2text/src/main/res/drawable/ic_launcher_foreground.xml
@@ -1,18 +1,25 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="108dp"
-    android:height="108dp"
-    android:viewportWidth="108"
-    android:viewportHeight="108"
-    android:tint="#000000">
-  <group android:scaleX="2.2968"
-      android:scaleY="2.2968"
-      android:translateX="26.4384"
-      android:translateY="26.4384">
+        android:width="108dp"
+        android:height="108dp"
+        android:viewportWidth="24"
+        android:viewportHeight="24"
+        android:tint="#000000">
+  <group
+     android:scaleX="0.5104"
+     android:scaleY="0.5104"
+     android:translateX="5.8752"
+     android:translateY="5.8752">
     <path
-        android:fillColor="@android:color/white"
-        android:pathData="M9,9m-4,0a4,4 0,1 1,8 0a4,4 0,1 1,-8 0"/>
+       android:fillColor="@android:color/white"
+       android:pathData="M10,9m-4,0a4,4 0,1 1,8 0a4,4 0,1 1,-8 0" />
     <path
-        android:fillColor="@android:color/white"
-        android:pathData="M9,15c-2.67,0 -8,1.34 -8,4v2h16v-2c0,-2.66 -5.33,-4 -8,-4zM16.76,5.36l-1.68,1.69c0.84,1.18 0.84,2.71 0,3.89l1.68,1.69c2.02,-2.02 2.02,-5.07 0,-7.27zM20.07,2l-1.63,1.63c2.77,3.02 2.77,7.56 0,10.74L20.07,16c3.9,-3.89 3.91,-9.95 0,-14z"/>
+       android:fillColor="@android:color/white"
+       android:pathData="M16.39,15.56C14.71,14.7 12.53,14 10,14c-2.53,0 -4.71,0.7 -6.39,1.56C2.61,16.07 2,17.1 2,18.22V21h16v-2.78C18,17.1 17.39,16.07 16.39,15.56z" />
+    <path
+       android:fillColor="@android:color/white"
+       android:pathData="M20.36,1l-1.41,1.41c2.73,2.73 2.73,7.17 0,9.9l1.41,1.41C23.88,10.21 23.88,4.51 20.36,1z" />
+    <path
+       android:fillColor="@android:color/white"
+       android:pathData="M17.54,10.9c1.95,-1.95 1.95,-5.12 0,-7.07l-1.41,1.41c1.17,1.17 1.17,3.07 0,4.24L17.54,10.9z" />
   </group>
 </vector>
