--- a/plugin-btn-ocr/src/main/res/layout/activity_main.xml
+++ b/plugin-btn-ocr/src/main/res/layout/activity_main.xml
@@ -6,14 +6,37 @@
    android:layout_width="match_parent"
    android:layout_height="match_parent">
 
-    <com.google.android.material.button.MaterialButton
-       android:text="OCR Document"
-       android:layout_width="wrap_content"
+    <ProgressBar
+       style="?android:attr/progressBarStyleHorizontal"
+       android:layout_width="0dp"
        android:layout_height="wrap_content"
-       android:id="@+id/button_submit"
-       app:layout_constraintBottom_toBottomOf="parent"
+       android:visibility="gone"
+       android:id="@+id/activity_main_progress_bar"
        app:layout_constraintEnd_toEndOf="parent"
-       app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
-       android:padding="16dp" />
+       app:layout_constraintTop_toTopOf="parent"
+       android:indeterminateOnly="true" />
+    <LinearLayout
+       android:orientation="vertical"
+       android:layout_width="match_parent"
+       android:layout_height="match_parent"
+       app:layout_constraintStart_toStartOf="parent"
+       app:layout_constraintEnd_toEndOf="parent"
+       app:layout_constraintBottom_toBottomOf="parent"
+       android:gravity="center"
+       app:layout_constraintTop_toTopOf="parent">
+        <com.google.android.material.button.MaterialButton
+           android:text="Open Camera"
+           android:layout_width="wrap_content"
+           android:layout_height="wrap_content"
+           android:id="@+id/button_open_camera"
+           android:padding="16dp" />
+        <com.google.android.material.button.MaterialButton
+           android:text="Select Image"
+           android:layout_width="wrap_content"
+           android:layout_height="wrap_content"
+           android:id="@+id/button_select_image"
+           android:padding="16dp" />
+    </LinearLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
