--- a/plugin-btn-ocr/src/main/res/values/arrays.xml
+++ b/plugin-btn-ocr/src/main/res/values/arrays.xml
@@ -1,6 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
+    <string-array name="ocr_language_model">
+        <item>Best</item>
+        <item>Fast</item>
+        <item>Standard</item>
+    </string-array>
+
+    <string-array name="ocr_language_model_values">
+        <item>@string/ocr_language_model_value_best</item>
+        <item>@string/ocr_language_model_value_fast</item>
+        <item>@string/ocr_language_model_value_standard</item>
+    </string-array>
+
+    <string name="ocr_language_model_value_best" translatable="false">best</string>
+    <string name="ocr_language_model_value_fast" translatable="false">fast</string>
+    <string name="ocr_language_model_value_standard" translatable="false">standard</string>
+
     <string-array name="ocr_languages">
         <item>Afrikaans</item>
         <item>Akkadian</item>
