--- a/plugin-btn-anki/src/main/res/layout/activity_launcher.xml
+++ b/plugin-btn-anki/src/main/res/layout/activity_launcher.xml
@@ -6,12 +6,8 @@
    android:layout_height="match_parent"
    android:gravity="center">
 
-    <TextView
-       android:id="@+id/textView"
-       android:layout_width="match_parent"
+    <ProgressBar
+       android:layout_width="wrap_content"
        android:layout_height="wrap_content"
-       android:gravity="center"
-       android:padding="16dp"
-       android:textSize="24sp"
-       android:textStyle="bold" />
+       android:indeterminate="true" />
 </LinearLayout>
