--- a/plugin-btn-chat-ai/src/main/res/xml/prefs.xml
+++ b/plugin-btn-chat-ai/src/main/res/xml/prefs.xml
@@ -49,6 +49,22 @@
            android:title="Generate API Key"
            android:key="@string/prefs_register_key"
            android:summary="Open registration page for Open AI Api Key" />
+
+        <CheckBoxPreference
+           android:title="@string/prefs_single_message_title"
+           android:key="@string/prefs_single_message_key"
+           android:summary="@string/prefs_single_message_summary"
+           app:defaultValue="false" />
+
+        <SeekBarPreference
+           android:title="@string/prefs_temperature_title"
+           android:key="@string/prefs_temperature_key"
+           app:min="0"
+           android:max="20"
+           app:seekBarIncrement="1"
+           app:showSeekBarValue="true"
+           android:defaultValue="8" />
+
     </PreferenceCategory>
 
 </PreferenceScreen>
