--- a/plugin-btn-chat-ai/src/main/res/layout/activity_main.xml
+++ b/plugin-btn-chat-ai/src/main/res/layout/activity_main.xml
@@ -28,7 +28,6 @@
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
-       android:layout_margin="8dp"
        android:orientation="horizontal"
        android:gravity="center_vertical">
 
@@ -37,10 +36,10 @@
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
-           android:padding="4dp"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="Select Prompt"
-           app:srcCompat="@drawable/baseline_terminal_24" />
+           app:srcCompat="@drawable/baseline_terminal_24"
+           android:layout_margin="8dp" />
 
         <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edit_text"
@@ -51,16 +50,18 @@
            android:inputType="textMultiLine|textCapSentences"
            android:hint="Message"
            android:maxLines="5"
-           android:padding="12dp" />
+           android:minHeight="52dp"
+           android:paddingStart="8dp"
+           android:paddingEnd="8dp" />
 
         <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/send_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
-           android:padding="8dp"
            android:background="?attr/selectableItemBackground"
-           app:srcCompat="@drawable/ic_send" />
+           app:srcCompat="@drawable/ic_send"
+           android:layout_margin="8dp" />
     </androidx.appcompat.widget.LinearLayoutCompat>
 
 </LinearLayout>
