--- a/plugin-btn-chat-ai/src/main/res/layout/activity_main.xml
+++ b/plugin-btn-chat-ai/src/main/res/layout/activity_main.xml
@@ -6,6 +6,17 @@
    android:layout_height="match_parent"
    android:layout_margin="8dp">
 
+    <com.google.android.material.progressindicator.LinearProgressIndicator
+       android:id="@+id/activity_main_progress_bar"
+       android:layout_width="match_parent"
+       android:layout_height="wrap_content"
+       android:visibility="gone"
+       android:indeterminate="true"
+       android:elevation="4dp"
+       app:layout_constraintStart_toStartOf="parent"
+       app:layout_constraintEnd_toEndOf="parent"
+       app:layout_constraintTop_toTopOf="parent" />
+
     <ListView
        android:id="@+id/list_view"
        android:layout_width="match_parent"
@@ -63,6 +74,7 @@
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="?attr/selectableItemBackground"
+           android:contentDescription="Send Message"
            app:srcCompat="@drawable/ic_send"
            android:padding="8dp" />
     </androidx.appcompat.widget.LinearLayoutCompat>
