feat: ai chat : improve ui

--- a/plugin-btn-chat-ai/src/main/res/layout/list_item_local.xml
+++ b/plugin-btn-chat-ai/src/main/res/layout/list_item_local.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<com.google.android.material.card.MaterialCardView
+   xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
@@ -7,6 +8,7 @@
    android:clipToPadding="true"
    android:layout_marginStart="56dp"
    android:foreground="?android:attr/selectableItemBackground"
+   app:cardBackgroundColor="?attr/colorSurfaceVariant"
    app:cardUseCompatPadding="true">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -31,6 +33,5 @@
            app:layout_constraintTop_toTopOf="parent"
            android:textAlignment="textEnd" />
 
-
     </androidx.constraintlayout.widget.ConstraintLayout>
-</androidx.cardview.widget.CardView>
+</com.google.android.material.card.MaterialCardView>
